--- a/src/style/index.css
+++ b/src/style/index.css
@@ -89,4 +89,43 @@
         tw-w-full
         tw-h-full
     }
+
+    /* 动画过渡 */
+    #app {
+        overflow: hidden;
+        width: 100%;
+        position: relative;
+        min-height: 100vh;
+        min-width: 100vw;
+    }
+
+    /* 路由动画 */
+    .child-view {
+        position: absolute;
+        width: 100%;
+        overflow: hidden;
+        transition: all .8s cubic-bezier(.55, 0, .1, 1);
+    }
+
+    /* 离开 */
+    .slide-fade-leave-to {
+        opacity: 0;
+        transform: translateX(50px)
+    }
+
+    /* 进入 */
+    .slide-fade-enter-from {
+        opacity: 0;
+        transform: translateX(-50px)
+    }
+
+    /*全局加载动画离开过渡*/
+    .loading-fade-leave-to {
+        opacity: 0;
+    }
+
+    /*全局加载动画进入过渡*/
+    .loading-fade-enter-from {
+        opacity: 0;
+    }
 }
