--- a/src/style/style.css
+++ b/src/style/style.css
@@ -8,7 +8,7 @@
     box-sizing: border-box; /* 1 */
     border-width: 0; /* 2 */
     border-style: solid; /* 2 */
-    border-color: theme('borderColor.DEFAULT', currentColor); /* 2 */
+    /*border-color: theme('borderColor.DEFAULT', currentColor); !* 2 *!*/
 }
 
 ::before,
@@ -30,9 +30,9 @@ html {
     -webkit-text-size-adjust: 100%; /* 2 */
     -moz-tab-size: 4; /* 3 */
     tab-size: 4; /* 3 */
-    font-family: theme('fontFamily.sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"); /* 4 */
-    font-feature-settings: theme('fontFamily.sans[1].fontFeatureSettings', normal); /* 5 */
-    font-variation-settings: theme('fontFamily.sans[1].fontVariationSettings', normal); /* 6 */
+    /*font-family: theme('fontFamily.sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"); !* 4 *!*/
+    /*font-feature-settings: theme('fontFamily.sans[1].fontFeatureSettings', normal); !* 5 *!*/
+    /*font-variation-settings: theme('fontFamily.sans[1].fontVariationSettings', normal); !* 6 *!*/
 }
 
 /*
@@ -94,7 +94,7 @@ code,
 kbd,
 samp,
 pre {
-    font-family: theme('fontFamily.mono', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace); /* 1 */
+    /*font-family: theme('fontFamily.mono', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace); !* 1 *!*/
     font-size: 1em; /* 2 */
 }
 
@@ -253,7 +253,7 @@ textarea {
 input::placeholder,
 textarea::placeholder {
     opacity: 1; /* 1 */
-    color: theme('colors.gray.400', #9ca3af); /* 2 */
+    /*color: theme('colors.gray.400', #9ca3af); !* 2 *!*/
 }
 
 /*
@@ -303,4 +303,13 @@ video {
 /* svg默认轮廓置空 */
 svg {
     outline: none;
+}
+
+/* 动画过渡 */
+#app {
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+    min-height: 100vh;
+    min-width: 100vw;
 }
